syntax = "proto3";

package tuples;

option go_package = "github.com/sourcenetwork/source-zanzibar/model";

/* Type for serialized zanzibar strucutres */

enum UserType {
    USER = 0;
    USER_SET = 1;
}

message User {
    UserType type = 1;
    /** For USER, identifier is an user id,  for USERT_SET identifier is an object id */
    Userset userset = 2;
}

message Userset {
    string namespace = 1;
    string objectId = 2;
    string relation = 3;
}

message Tuple {
    Userset objectRel = 1;
    Userset user = 2;
}

message TupleRecord {
    Tuple tuple = 1;
    // add creation datetime
    // string for metadata
}
